finished the backbone of the HTML, time to fine tweak the css.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,48 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-	<div class="topHeader">
-		<h1 id="headerName">John Cronin</h1>
-		<p id="headerInfo">Student at Omaha Code School</p>
+	<div class= "header">
+		<div class="topHeader parentBox">
+			<h1 id="headerName">John Cronin</h1>
+			<p id="headerInfo">Student at Omaha Code School</p>
+		</div>
+		<div class="linkHeader parentBox">
+			<span class="fa-stack fa-lg">
+		  		<i class="fa fa-circle fa-stack-2x"></i>
+		  		<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+			</span>
+			<!-- <i class="fa fa-twitter fa-fw fa-lg" aria-hidden="true"></i> -->
+			<span class="fa-stack fa-lg">
+		  		<i class="fa fa-circle fa-stack-2x"></i>
+		  		<i class="fa fa-github fa-stack-1x  fa-inverse"></i>
+			</span>
+			<span class="fa-stack fa-lg">
+		  		<i class="fa fa-circle fa-stack-2x"></i>
+		  		<i class="fa fa-rss-square fa-stack-1x  fa-inverse"></i>
+			</span>
+			<a href="#" class="headerLinks">Articles</a>
+			<a href="#" class="headerLinks">About</a>
+			<!-- <i class="fa fa-github fa-fw fa-lg" aria-hidden="true"></i> -->
+			<!-- <i class="fa fa-rss-square fa-fw fa-lg" aria-hidden="true"></i> -->
+		</div>
 	</div>
-	<div class="linkHeader">
-		<i class="fa fa-twitter" aria-hidden="true"></i>
-		<i class="fa fa-github" aria-hidden="true"></i>
-		<i class="fa fa-rss-square" aria-hidden="true"></i>
-		<a href="#">Articles</a>
-		<a href="#">About</a>
+	<div class= "innerBody"> 
+		<h3>Recent Articles</h3>
+		<div class="articles">
+			<p class="date">Date</p>
+			<h3 class="articleTitle">Title of the Article</h3>
+			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+		</div>
+		<div class="articles">
+			<p class="date">Date</p>
+			<h3 class="articleTitle">Title of the Article</h3>
+			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+		</div>
+		<div class="articles">
+			<p class="date">Date</p>
+			<h3 class="articleTitle">Title of the Article</h3>
+			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+		</div>
 	</div>
 </body>
 </html>
