homepage styles correct and efficeint

--- a/index.html
+++ b/index.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Homepage</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 </head>
 <body>
 	<div class= "header">
 		<div class="topHeader parentBox">
 			<h1 id="headerName">John Cronin</h1>
-			<p id="headerInfo">Student at Omaha Code School</p>
+			<div id="headerInfo">Student at Omaha Code School</div>
 		</div>
 		<div class="linkHeader parentBox">
-			<span class="fa-stack fa-lg">
-		  		<i class="fa fa-circle fa-stack-2x"></i>
-		  		<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-			</span>
-			<!-- <i class="fa fa-twitter fa-fw fa-lg" aria-hidden="true"></i> -->
-			<span class="fa-stack fa-lg">
-		  		<i class="fa fa-circle fa-stack-2x"></i>
-		  		<i class="fa fa-github fa-stack-1x  fa-inverse"></i>
-			</span>
-			<span class="fa-stack fa-lg">
-		  		<i class="fa fa-circle fa-stack-2x"></i>
-		  		<i class="fa fa-rss-square fa-stack-1x  fa-inverse"></i>
-			</span>
-			<a href="#" class="headerLinks">Articles</a>
-			<a href="#" class="headerLinks">About</a>
-			<!-- <i class="fa fa-github fa-fw fa-lg" aria-hidden="true"></i> -->
-			<!-- <i class="fa fa-rss-square fa-fw fa-lg" aria-hidden="true"></i> -->
+			<div class="socialMedia">
+				<span class="fa-stack">
+		  			<i class="fa fa-circle fa-stack-2x"></i>
+		  			<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+				</span>
+				<span class="fa-stack">
+		  			<i class="fa fa-circle fa-stack-2x"></i>
+		  			<i class="fa fa-github fa-stack-1x  fa-inverse"></i>
+				</span>
+				<span class="fa-stack">
+		  			<i class="fa fa-circle fa-stack-2x"></i>
+		  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse"></i>
+				</span>
+			</div>
+			<div class="navLinks">
+				<a href="#" class="headerLinks">Articles</a>
+				<a href="#" class="headerLinks">About</a>
+			</div>
 		</div>
 	</div>
 	<div class= "innerBody"> 
-		<h3>Recent Articles</h3>
-		<div class="articles">
-			<p class="date">Date</p>
-			<h3 class="articleTitle">Title of the Article</h3>
-			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+		<h3 class="articlesHeader">Recent Articles</h3>
+		<div class="articles firstArticle">
+			<div class="date">August 12th, 2017</div>
+			<h3 class="articleTitle"><a href="firstArticle.html">Title of the Article That I want to wrap around if it is longer than a line</a></h3>
+			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever...</p>
+			<p style="display: none"> if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
 		</div>
-		<div class="articles">
-			<p class="date">Date</p>
-			<h3 class="articleTitle">Title of the Article</h3>
-			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+		<div class="articles secondArticle">
+			<div class="date">August 12th, 2017</div>
+			<h3 class="articleTitle"><a href="secondArticle.html">Title of the Article That I want to wrap around if it is longer than a line</a></h3>
+			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever...</p>
+			<p style="display: none"> if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
 		</div>
-		<div class="articles">
-			<p class="date">Date</p>
-			<h3 class="articleTitle">Title of the Article</h3>
-			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+		<div class="articles thirdArticle">
+			<div class="date">August 12th, 2017</div>
+			<h3 class="articleTitle"><a href="thirdArticle.html">Title of the Article That I want to wrap around if it is longer than a line</a></h3>
+			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever...</p>
+			<p style="display: none"> if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
 		</div>
 	</div>
 </body>
