works now in browser and connects to about page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class= "header">
 		<div class="topHeader parentBox">
-			<h1 id="headerName">John Cronin</h1>
+			<a href="about.html"><h1 id="headerName">John Cronin</h1></a>
 			<div id="headerInfo">Student at Omaha Code School</div>
 		</div>
 		<div class="linkHeader parentBox">
