--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 		</div>
 		<div class="linkHeader parentBox">
 			<div class="socialMedia">
-				<span class="fa-stack">
-		  			<i class="fa fa-circle fa-stack-2x"></i>
-		  			<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-				</span>
-				<span class="fa-stack">
-		  			<i class="fa fa-circle fa-stack-2x"></i>
-		  			<i class="fa fa-github fa-stack-1x  fa-inverse"></i>
-				</span>
-				<span class="fa-stack">
-		  			<i class="fa fa-circle fa-stack-2x"></i>
-		  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse"></i>
-				</span>
+				<a class="btn btn-default btnTwitter" href="https://twitter.com/jt_cronin">
+					<span class="fa-stack">
+			  			<i class="fa fa-circle fa-stack-2x"></i>
+			  			<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+					</span>
+				</a>
+					<span class="fa-stack">
+			  			<i class="fa fa-circle fa-stack-2x"></i>
+			  			<i class="fa fa-github fa-stack-1x  fa-inverse"></i>
+					</span>
+					<span class="fa-stack">
+			  			<i class="fa fa-circle fa-stack-2x"></i>
+			  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse"></i>
+					</span>
 			</div>
 			<div class="navLinks">
 				<a href="#" class="headerLinks">Articles</a>
