--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Homepage</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style/styles.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
@@ -10,29 +10,29 @@
 <body>
 	<div class= "header">
 		<div class="topHeader parentBox">
-			<a href="about.html"><h1 id="headerName">John Cronin</h1></a>
+			<h1 id="headerName">John Cronin</h1>
 			<div id="headerInfo">Student at Omaha Code School</div>
 		</div>
 		<div class="linkHeader parentBox">
 			<div class="socialMedia">
 				<a class="btn btn-default btnTwitter" href="https://twitter.com/jt_cronin">
 					<span class="fa-stack">
-			  			<i class="fa fa-circle fa-stack-2x"></i>
-			  			<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+			  			<i class="fa fa-circle fa-stack-2x faTwit"></i>
+			  			<i class="fa fa-twitter fa-stack-1x fa-inverse faTwit"></i>
 					</span>
 				</a>
-					<span class="fa-stack">
-			  			<i class="fa fa-circle fa-stack-2x"></i>
-			  			<i class="fa fa-github fa-stack-1x  fa-inverse"></i>
+					<span class="fa-stack githubStack">
+			  			<i class="fa fa-circle fa-stack-2x faGit"></i>
+			  			<i class="fa fa-github fa-stack-1x  fa-inverse faGit"></i>
 					</span>
-					<span class="fa-stack">
-			  			<i class="fa fa-circle fa-stack-2x"></i>
-			  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse"></i>
+					<span class="fa-stack rssStack">
+			  			<i class="fa fa-circle fa-stack-2x faRss"></i>
+			  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse faRss"></i>
 					</span>
 			</div>
 			<div class="navLinks">
-				<a href="#" class="headerLinks">Articles</a>
-				<a href="#" class="headerLinks">About</a>
+				<a href="articles.html" class="headerLinks">Articles</a>
+				<a href="about.html" class="headerLinks">About</a>
 			</div>
 		</div>
 	</div>
