--- a/index.html
+++ b/index.html
@@ -10,30 +10,42 @@
 <body>
 	<div class= "header">
 		<div class="topHeader parentBox">
-			<h1 id="headerName">John Cronin</h1>
-			<div id="headerInfo">Student at Omaha Code School</div>
-		</div>
-		<div class="linkHeader parentBox">
-			<div class="socialMedia">
-				<a class="btn btn-default btnTwitter" href="https://twitter.com/jt_cronin">
-					<span class="fa-stack">
-			  			<i class="fa fa-circle fa-stack-2x faTwit"></i>
-			  			<i class="fa fa-twitter fa-stack-1x fa-inverse faTwit"></i>
-					</span>
+			<div>
+				<h1 id="headerName">John Cronin</h1>
+				<div id="headerInfo">Student at Omaha Code School</div>
+			</div>
+			<div>
+				<a class="btn btn-primary" href="#" aria-label="Skip to main navigation">
+  					<i class="fa fa-bars fa-3x" aria-hidden="true"></i>
 				</a>
-					<span class="fa-stack githubStack">
-			  			<i class="fa fa-circle fa-stack-2x faGit"></i>
-			  			<i class="fa fa-github fa-stack-1x  fa-inverse faGit"></i>
-					</span>
-					<span class="fa-stack rssStack">
-			  			<i class="fa fa-circle fa-stack-2x faRss"></i>
-			  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse faRss"></i>
-					</span>
+			</div>	
+		</div>
+		<div class="hideShow">
+			<div class="linkHeader parentBox">
+				<div class="socialMedia">
+					<a class="btn btn-default btnTwitter" href="https://twitter.com/jt_cronin">
+						<span class="fa-stack">
+				  			<i class="fa fa-circle fa-stack-2x faTwit"></i>
+				  			<i class="fa fa-twitter fa-stack-1x fa-inverse faTwit"></i>
+						</span>
+					</a>
+						<span class="fa-stack">
+				  			<i class="fa fa-circle fa-stack-2x faGit"></i>
+				  			<i class="fa fa-github fa-stack-1x  fa-inverse faGit"></i>
+						</span>
+						<span class="fa-stack">
+				  			<i class="fa fa-circle fa-stack-2x faRss"></i>
+				  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse faRss"></i>
+						</span>
+				</div>
+				<div class="navLinks">
+					<a href="articles.html" class="headerLinks">Articles</a>
+					<a href="about.html" class="headerLinks">About</a>
+				</div>
 			</div>
-			<div class="navLinks">
-				<a href="articles.html" class="headerLinks">Articles</a>
-				<a href="about.html" class="headerLinks">About</a>
-			</div>
+		</div>
+		<div class="imageDiv">
+				<img src="img/mountains.jpg" alt="mountains" class="headerPic">
 		</div>
 	</div>
 	<div class= "innerBody"> 
