dropdown menu js

--- a/firstArticle.html
+++ b/firstArticle.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>firstArticle</title>
-	<link rel="stylesheet" type="text/css" href="articleStyles.css">
+	<link rel="stylesheet" type="text/css" href="style/articleStyles.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
