--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+	<link type="text/javascript" src= "scripts/main.js">
 </head>
 <body>
 	<div class= "header">
@@ -14,11 +15,11 @@
 				<h1 id="headerName">John Cronin</h1>
 				<div id="headerInfo">Student at Omaha Code School</div>
 			</div>
-			<div>
+			<div id="dropDown">
 				<a class="btn btn-primary" href="#" aria-label="Skip to main navigation">
   					<i class="fa fa-bars fa-3x" aria-hidden="true"></i>
 				</a>
-			</div>	
+			</div>
 		</div>
 		<div class="hideShow">
 			<div class="linkHeader parentBox">
@@ -43,7 +44,7 @@
 					<a href="about.html" class="headerLinks">About</a>
 				</div>
 			</div>
-		</div>
+		</div>	
 		<div class="imageDiv">
 				<img src="img/mountains.jpg" alt="mountains" class="headerPic">
 		</div>
