--- a/index.html
+++ b/index.html
@@ -6,14 +6,36 @@
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
-	<link type="text/javascript" src= "scripts/main.js">
+	<script type="text/javascript" src="scripts/main.js"></script>
 </head>
 <body>
 	<div class= "header">
 		<div class="topHeader parentBox">
-			<div>
+			<div class="infoJT">
 				<h1 id="headerName">John Cronin</h1>
 				<div id="headerInfo">Student at Omaha Code School</div>
+			</div>
+			<div class="linkHeader parentBox hideShowPC">
+				<div class="socialMedia">
+					<a class="btn btn-default btnTwitter" href="https://twitter.com/jt_cronin">
+						<span class="fa-stack">
+				  			<i class="fa fa-circle fa-stack-2x faTwit"></i>
+				  			<i class="fa fa-twitter fa-stack-1x fa-inverse faTwit"></i>
+						</span>
+					</a>
+						<span class="fa-stack">
+				  			<i class="fa fa-circle fa-stack-2x faGit"></i>
+				  			<i class="fa fa-github fa-stack-1x  fa-inverse faGit"></i>
+						</span>
+						<span class="fa-stack">
+				  			<i class="fa fa-circle fa-stack-2x faRss"></i>
+				  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse faRss"></i>
+						</span>
+				</div>
+				<div class="navLinks">
+					<a href="articles.html" class="headerLinks">Articles</a>
+					<a href="about.html" class="headerLinks">About</a>
+				</div>
 			</div>
 			<div id="dropDown">
 				<a class="btn btn-primary" href="#" aria-label="Skip to main navigation">
@@ -22,7 +44,7 @@
 			</div>
 		</div>
 		<div class="hideShow">
-			<div class="linkHeader parentBox">
+			<div class="linkHeader parentBox hideShowPC">
 				<div class="socialMedia">
 					<a class="btn btn-default btnTwitter" href="https://twitter.com/jt_cronin">
 						<span class="fa-stack">
