--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>About JT Cronin</title>
-	<link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
+	<link rel="stylesheet" type="text/css" href="style/styles.css">
 </head>
 <body>
 Welcome to my about page.
