--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
 	<div class= "innerBody"> 
 		<h3 class="articlesHeader">Recent Articles</h3>
 		<div class="articles firstArticle">
-			<div class="date">August 12th, 2017</div>
-			<h3 class="articleTitle"><a href="firstArticle.html">Title of the Article That I want to wrap around if it is longer than a line</a></h3>
-			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever...</p>
-			<p style="display: none"> if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+			<div class="date">September 9th, 2017</div>
+			<h3 class="articleTitle"><a href="firstArticle.html">Mondrian Tutorial</a></h3>
+			<p class="articleContent">Step by step tutorial on how to code a mondrian paiting. Requires some knowledge with HTML and CSS</p>
 		</div>
 		<div class="articles secondArticle">
 			<div class="date">August 12th, 2017</div>
