about page and tutorial added

--- a/index.html
+++ b/index.html
@@ -76,19 +76,12 @@
 		<div class="articles firstArticle">
 			<div class="date">September 9th, 2017</div>
 			<h3 class="articleTitle"><a href="firstArticle.html">Mondrian Tutorial</a></h3>
-			<p class="articleContent">Step by step tutorial on how to code a mondrian paiting. Requires some knowledge with HTML and CSS</p>
+			<p class="articleMainContent">Step by step tutorial on how to code a mondrian paiting. Requires some knowledge with HTML and CSS</p>
 		</div>
 		<div class="articles secondArticle">
 			<div class="date">August 12th, 2017</div>
-			<h3 class="articleTitle"><a href="secondArticle.html">Title of the Article That I want to wrap around if it is longer than a line</a></h3>
-			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever...</p>
-			<p style="display: none"> if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
-		</div>
-		<div class="articles thirdArticle">
-			<div class="date">August 12th, 2017</div>
-			<h3 class="articleTitle"><a href="thirdArticle.html">Title of the Article That I want to wrap around if it is longer than a line</a></h3>
-			<p class="articleContent">Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever...</p>
-			<p style="display: none"> if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. Article text that could go on for forever if we let it. </p>
+			<h3 class="articleTitle"><a href="articles/wordCountTut.html">Word Counting</a></h3>
+			<p class="articleMainContent">Simple ruby program that tests a set of words and counts how many occurences of each word there is. This will only be run in the command line.</p>
 		</div>
 	</div>
 </body>
