cleaned up, ready for second tutorial

--- a/pages/flexboxTut.html
+++ b/pages/flexboxTut.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>firstArticle</title>
+	<title>Flexbox Tutorial</title>
 	<link rel="stylesheet" type="text/css" href="../style/styles.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -16,15 +16,12 @@
 	</div>
 	<div class= "innerBody">
 		<div class="articles firstArticle">
-			<h3 class="articleTitle">Word Count</h3>
+			<h3 class="articleTitle">Flex Box</h3>
 			<p class="date">September 10th, 2017</p>
-			<p class="articleContent">This is a program that is done in Ruby. Ruby is a server side language that has many shortcuts for programmers.</p>
+			<p class="articleContent">This will have many examples for how to best use flexbox when styling a webpage in CSS</p>
 			<p class="articleContent"></p>
-			<p class="articleContent"></p>
-			<p class="articleContent"></p>
-			<p class="articleContent"></p>
-			<p class="articleContent"></p>
-			<p class="articleContent"></p>
+			<div class="flexTut"></div>
+
 		</div>
 	</div>
 </body>
