--- a/pages/index.html
+++ b/pages/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Homepage</title>
-	<link rel="stylesheet" type="text/css" href="style/styles.css">
+	<link rel="stylesheet" type="text/css" href="../style/styles.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
@@ -68,20 +68,20 @@
 			</div>
 		</div>	
 		<div class="imageDiv">
-				<img src="img/mountains.jpg" alt="mountains" class="headerPic">
+				<img src="../img/mountains.jpg" alt="mountains" class="headerPic">
 		</div>
 	</div>
 	<div class= "innerBody"> 
 		<h3 class="articlesHeader">Recent Articles</h3>
-		<div class="articles firstArticle">
+		<div class="articles">
 			<div class="date">September 9th, 2017</div>
-			<h3 class="articleTitle"><a href="firstArticle.html">Mondrian Tutorial</a></h3>
+			<h3 class="articleTitle"><a href="mondrianTut.html">Mondrian Tutorial</a></h3>
 			<p class="articleMainContent">Step by step tutorial on how to code a mondrian paiting. Requires some knowledge with HTML and CSS</p>
 		</div>
 		<div class="articles secondArticle">
 			<div class="date">August 12th, 2017</div>
-			<h3 class="articleTitle"><a href="articles/wordCountTut.html">Word Counting</a></h3>
-			<p class="articleMainContent">Simple ruby program that tests a set of words and counts how many occurences of each word there is. This will only be run in the command line.</p>
+			<h3 class="articleTitle"><a href="flexboxTut.html">FlexBox</a></h3>
+			<p class="articleMainContent">This will have many examples for how to best use flexbox when styling a webpage in CSS</p>
 		</div>
 	</div>
 </body>
