--- a/pages/mondrianTut.html
+++ b/pages/mondrianTut.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>firstArticle</title>
-	<link rel="stylesheet" type="text/css" href="style/styles.css">
+	<title>Mondrian Tutorial</title>
+	<link rel="stylesheet" type="text/css" href="../style/styles.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
