cleaned up, ready for second tutorial for real now

--- a/pages/flexboxTut.html
+++ b/pages/flexboxTut.html
@@ -10,7 +10,7 @@
 <body>
 	<div class= "header">
 		<div class="topHeader parentBox">
-			<a href="../index.html"><h1 id="headerName">John Cronin</h1></a>
+			<a href="index.html"><h1 id="headerName">John Cronin</h1></a>
 			<p id="headerInfo">Student at Omaha Code School</p>
 		</div>
 	</div>
