added tutorial and functionality

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>Homepage</title>
 	<link rel="stylesheet" type="text/css" href="../style/styles.css">
-	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
-	<script type="text/javascript" src="scripts/main.js"></script>
+	<script type="text/javascript" src="../scripts/main.js"></script>
 </head>
 <body>
 	<div class= "header">
@@ -23,10 +23,12 @@
 				  			<i class="fa fa-twitter fa-stack-1x fa-inverse faTwit"></i>
 						</span>
 					</a>
+					<a class="btn btn-default btnGithub" href="https://github.com/jt-cronin">
 						<span class="fa-stack">
 				  			<i class="fa fa-circle fa-stack-2x faGit"></i>
 				  			<i class="fa fa-github fa-stack-1x  fa-inverse faGit"></i>
 						</span>
+					</a>
 						<span class="fa-stack">
 				  			<i class="fa fa-circle fa-stack-2x faRss"></i>
 				  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse faRss"></i>
@@ -52,10 +54,12 @@
 				  			<i class="fa fa-twitter fa-stack-1x fa-inverse faTwit"></i>
 						</span>
 					</a>
+					<a class="btn btn-default btnGithub" href="https://github.com/jt-cronin">
 						<span class="fa-stack">
 				  			<i class="fa fa-circle fa-stack-2x faGit"></i>
 				  			<i class="fa fa-github fa-stack-1x  fa-inverse faGit"></i>
 						</span>
+					</a>
 						<span class="fa-stack">
 				  			<i class="fa fa-circle fa-stack-2x faRss"></i>
 				  			<i class="fa fa-rss-square fa-stack-1x  fa-inverse faRss"></i>
