--- a/pages/mondrianTut.html
+++ b/pages/mondrianTut.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Mondrian Tutorial</title>
 	<link rel="stylesheet" type="text/css" href="../style/styles.css">
-	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 </head>
